adding video and head

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,24 +7,55 @@
       Congratulations on finding the
       %i
         best*
-      Helvetica text-only laminator in the tri-state area. You've found Dr. Laminator**
+      text-only laminator in the tri-state area...
+      You've found Dr. Laminator**
 
     %p
-      Family owned since 1906***, take the stress out of protecting your text with Dr. Laminator's custom lamination
-      solution.
+      With sea levels rising, ensuring your documents are protected from water damage and other hazards has never been
+      more important. The question is no longer "why should I laminate?", it is "how can Dr. Laminator help me?".
+
+    %p
+      Family owned since 1906***, Dr. Laminator takes the stress out of protecting custom messages by grappling the latest in
+      %a{href: 'http://www.amazon.com/Scotch-Thermal-Laminator-Roller-TL901/dp/B0010JEJPC', target: '_blank'} lamination technology
+      to provide you with the following services...
+
+      %ul
+        %li
+          Any custom message you can possibly comprehend printed in Helvetica on A4 and laminated with teutonic precision.
+        %li
+          A shorter custom message printed in Helvetica on paper roughly the size of a fake ID
+          and laminated with a similar degree of precision.
+
+    %p
+      Your search for peace of mind is over. Visit
+      %a{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank'} Dr. Laminator on Etsy.com
+      and tell him what message you want laminated.
+
+    %p
+      Relax -- all your worries are over.
+
+    %p.sign-off
+      Dr. Laminator
+      %br
+      XOXO
 
   .right-block
-    hello
+    .block
+      %h3
+        Watch our commercial
+        %i
+          "Laminating Dreams"
+      %iframe{allowscriptaccess: 'always', allowFullScreen: 'true', frameborder: '0', height: '191', width: '340', src: "http://www.youtube.com/embed/XJUBwNguJpQ"}
 
 -content_for :footer_text do
   %p
-    * Quality of lamination is probably subjective and no market research has been performed to confirm the
-    accuracy that Dr. Laminator is the best laminator in the New York metropolitan area. If you are a professional
-    laminator who is losing a very specific set of customers to Dr. Laminator, sorry. Also think about reading a
+    * Quality of lamination is probably subjective and no research has been performed to confirm the
+    claim Dr. Laminator is the best laminator in the New York metropolitan area. If you are a professional
+    laminator who is losing a very specific set of customers to Dr. Laminator think about reading a
     book on marketing. It's a tough world out there. Sorry.
   %p
     ** While Dr. Laminator will perform minor medical procedures (we've all got bills to pay), Dr. Laminator is not
-    a qualified doctor.
+    a qualified doctor. All text is in Helvetica.
 
   %p
     *** This is not true. Check the facts, Wikipedia puts plastic at about 1907 and Dr. Laminator does not have a
