--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,7 +19,7 @@
 
       .right-block
         %a.etsy-link.inner-block{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank'}
-          Buy on Etsy
+          Order on Etsy!
 
         %a.testimonials-link.inner-block{href: '/testimonials'}
           Testimonials
