--- a/css/application.sass
+++ b/css/application.sass
@@ -5,9 +5,8 @@ $light_font: whitesmoke
 $secondary_light_font: #a8d3ff
 
 html, body
-  height: 100%
   min-height: 100%
-  min-width: 700px
+  min-width: 1160px
 
 body
   font-family: $helvetica
@@ -15,7 +14,7 @@ body
   margin: 0
   @include background(linear-gradient($primary_color, #870000) top repeat)
 
-h1, h2
+h1, h2, h3
   margin: 0
   padding: 0
 
@@ -24,9 +23,10 @@ h1, h2
   margin: 0 auto
 
 .header-row
+  font-size: golden-ratio(18px,  1)
   @include clearfix
   color: $light_font
-  padding: 2% 0
+  padding-top: 2%
 
   a, a:visited, a:active
     color: $light_font
@@ -38,6 +38,10 @@ h1, h2
     float: left
     width: 50%
 
+    background: url(/images/drlaminator_head_cutout.png) no-repeat
+    background-size: contain
+    background-position: right
+
     h1
       a
         text-shadow: 3px 3px #850000
@@ -47,8 +51,10 @@ h1, h2
       font-size: 75%
       font-family: $georgia
       font-style: italic
+      padding-bottom: 2%
 
   .right-block
+    padding-top: 10px
     float: right
     width: 50%
 
@@ -60,11 +66,11 @@ h1, h2
       margin-left: 10px
 
     .testimonials-link, .home-link
-      margin: 8px 10px
+      margin: 7px 10px
 
 .footer-row
   padding-top: 30px
-  font-size: 70%
+  font-size: 12px
   color: $light_font
   text-align: center
 
@@ -81,13 +87,27 @@ h1, h2
 
   .home
     padding: 2%
+
     .left-block
-      width: 66%
+      min-width: 300px
+      width: 64%
       float: left
 
       h2
         color: $primary_color
 
     .right-block
-      width: 33%
+      padding-left: 10px
       float: right
+      width: 30%
+      min-width: 350px
+
+      .block
+        padding-bottom: 10px
+
+        h3
+          padding-bottom: 20px
+
+    .sign-off
+      font-family: "comic Sans MS"
+      font-style: italic
