--- a/views/index.haml
+++ b/views/index.haml
@@ -47,6 +47,14 @@
           "Laminating Dreams"
       %iframe{allowscriptaccess: 'always', allowFullScreen: 'true', frameborder: '0', height: '191', width: '340', src: "http://www.youtube.com/embed/XJUBwNguJpQ"}
 
+    .block
+      %h3
+        %a{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank', rel: 'canonical'}
+          Order NOW on Etsy!
+
+      %a{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank'}
+        %img{src: '/images/explanation_sign.png'}
+
 -content_for :footer_text do
   %p
     * Quality of lamination is probably subjective and no research has been performed to confirm the
