using some made up names

--- a/views/testimonials.haml
+++ b/views/testimonials.haml
@@ -15,11 +15,11 @@
       .quote
         "Somebody kept mocking my parking instructions. Now they're laminated, I just scrub the mockery away!"
       .attributed
-        Somebody blah -- Car Park Attendant
+        Emilia Aniela -- Car Park Attendant
 
     .cell
       %img{src: '/images/testimonial_2.jpg', alt: 'Member of public one'}
       .quote
         "I would have needed to print more divorce papers if it weren't for Dr. Laminator!"
       .attributed
-        Somebody else blah -- Future Divorcee
+        Staas Kobus -- Future Divorcee
