--- a/views/testimonials.haml
+++ b/views/testimonials.haml
@@ -20,6 +20,6 @@
     .cell
       %img{src: '/images/testimonial_2.jpg', alt: 'Member of public one'}
       .quote
-        "I would have needed to print more divorce papers if it weren't for Dr. Laminator!"
+        "I would have needed to print my divorce papers again if it weren't for Dr. Laminator! Boy, am I relieved!"
       .attributed
         Staas Kobus -- Future Divorcee
