--- a/views/index.haml
+++ b/views/index.haml
@@ -21,10 +21,9 @@
 
       %ul
         %li
-          Any custom message you can possibly comprehend printed in Helvetica on A4 and laminated with teutonic precision.
+          Any message you can dream of printed in the finest Helvetica on A4 paper and laminated with teutonic precision.
         %li
-          A shorter custom message printed in Helvetica on paper roughly the size of a fake ID
-          and laminated with a similar degree of precision.
+          A shorter custom message printed in Helvetica on paper roughly the size of a fake ID, sealed in luxurious plastic.
 
     %p
       Your search for peace of mind is over. Visit
@@ -32,7 +31,7 @@
       and tell him what message you want laminated.
 
     %p
-      Relax -- all your worries are over.
+      Relax -- you've got Dr. Laminator on your side.
 
     %p.sign-off
       Dr. Laminator
