--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,7 +15,7 @@
             Dr. Laminator
 
         .sub-heading
-          Helvetica wrapped in plastic since 1906
+          Helvetica wrapped in plastic
 
       .right-block
         %a.etsy-link.inner-block{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank'}
