--- a/views/index.haml
+++ b/views/index.haml
@@ -31,7 +31,7 @@
       and tell him what message you want laminated.
 
     %p
-      Relax -- you've got Dr. Laminator on your side.
+      Relax. You have Dr. Laminator on your side.
 
     %p.sign-off
       Dr. Laminator
