testing viewport spec

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %meta{name: 'viewport', content: 'width=1200'}
     %title
       Dr. Laminator -
       =yield_content :title
