fixing comic sans on ipad. critical.

--- a/css/application.sass
+++ b/css/application.sass
@@ -117,7 +117,7 @@ h2
 
 
     .sign-off
-      font-family: "comic Sans MS"
+      font-family: 'Comic Sans MS', 'Marker Felt', sans-serif
       font-style: italic
 
 .testimonials
