--- a/css/application.sass
+++ b/css/application.sass
@@ -138,11 +138,15 @@ h2
 
   .interviews
     @include clearfix
+    margin: 0 auto
+    width: 870px
     padding-top: 2%
+
     .cell
-      padding: 10px
-      width: 287px
-      float: left
+      vertical-align: top
+      padding: 20px
+      width: 244px
+      display: inline-block
 
       img
         border: 10px solid $secondary_light_font
