--- a/views/testimonials.haml
+++ b/views/testimonials.haml
@@ -11,15 +11,22 @@
 
   .interviews
     .cell
-      %img{src: '/images/testimonial_1.jpg', alt: 'Member of public one'}
-      .quote
-        "Somebody kept mocking my parking instructions. Now they're laminated, I just scrub the mockery away!"
-      .attributed
-        Emilia Aniela -- Car Park Attendant
-
-    .cell
       %img{src: '/images/testimonial_2.jpg', alt: 'Member of public one'}
       .quote
-        "I would have needed to print my divorce papers again if it weren't for Dr. Laminator! Boy, am I relieved!"
+        "Going through an overdue divorce, I can rest easy knowing my husband can't destroy his laminated paperwork."
+      .attributed
+        Antje Kobus -- Future Divorcee
+
+    .cell
+      %img{src: '/images/testimonial_6.jpg', alt: 'Member of public one'}
+      .quote
+        "Spilt whiskey on my Chinese visa... Who cares!? It was freeze-heated in plastic! Kapow!"
+      .attributed
+        Teddi Sheringham -- Student
+
+    .cell
+      %img{src: '/images/testimonial_5.jpg', alt: 'Member of public one'}
+      .quote
+        "Thanks to Dr. Laminator, my divorce papers weren't damaged by water. Lamination does not fully prevent fire damage."
       .attributed
         Staas Kobus -- Future Divorcee
