--- a/views/index.haml
+++ b/views/index.haml
@@ -27,7 +27,7 @@
 
     %p
       Your search for peace of mind is over. Visit
-      %a{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank'} Dr. Laminator on Etsy.com
+      %a{href: 'https://www.etsy.com/listing/211052681/custom-laminated-helvetica-message', target: '_blank'} Dr. Laminator on Etsy.com
       and tell him what message you want laminated.
 
     %p
@@ -48,10 +48,10 @@
 
     .block
       %h3
-        %a{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank', rel: 'canonical'}
+        %a{href: 'https://www.etsy.com/listing/211052681/custom-laminated-helvetica-message', target: '_blank', rel: 'canonical'}
           Order NOW on Etsy!
 
-      %a{href: 'https://www.etsy.com/shop/DrLaminator', target: '_blank'}
+      %a{href: 'https://www.etsy.com/listing/211052681/custom-laminated-helvetica-message', target: '_blank'}
         %img{src: '/images/explanation_sign.png'}
 
 -content_for :footer_text do
