--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,7 +19,7 @@
           Helvetica wrapped in plastic
 
       .right-block
-        %a.etsy-link.inner-block{href: 'https://www.etsy.com/listing/211052681/custom-laminated-helvetica-message', target: '_blank'}
+        %a.etsy-link.inner-block{href: ETSY_URL, target: '_blank'}
           Order on Etsy!
 
         %a.testimonials-link.inner-block{href: '/testimonials'}
