changing commercial from "our" to "the"

--- a/views/index.haml
+++ b/views/index.haml
@@ -41,7 +41,7 @@
   .right-block
     .block
       %h3
-        Watch our commercial
+        Watch the commercial
         %i
           "Laminating Dreams"
       %iframe{allowscriptaccess: 'always', allowFullScreen: 'true', frameborder: '0', height: '191', width: '340', src: "http://www.youtube.com/embed/XJUBwNguJpQ"}
