added corrections to testimonials

--- a/views/testimonials.haml
+++ b/views/testimonials.haml
@@ -13,20 +13,26 @@
     .cell
       %img{src: '/images/testimonial_2.jpg', alt: 'Member of public one'}
       .quote
-        "Going through an overdue divorce, I can rest easy knowing my husband can't destroy his laminated paperwork."
+        "Going through an overdue divorce, I can rest easy knowing my husband can't destroy his laminated paperwork*."
       .attributed
         Antje Kobus -- Future Divorcee
 
     .cell
       %img{src: '/images/testimonial_6.jpg', alt: 'Member of public one'}
       .quote
-        "Spilt whiskey on my Chinese visa... Who cares!? It was freeze-heated in plastic! Kapow!"
+        "Spilt whiskey on my Chinese visa... Who cares!? It was freeze-heated in plastic*! Kapow!"
       .attributed
         Teddi Sheringham -- Student
 
     .cell
       %img{src: '/images/testimonial_5.jpg', alt: 'Member of public one'}
       .quote
-        "Thanks to Dr. Laminator, my divorce papers weren't damaged by water. Lamination does not fully prevent fire damage."
+        "Thanks to Dr. Laminator*, my divorce papers weren't damaged by water. Lamination does not fully prevent fire damage**."
       .attributed
         Staas Kobus -- Future Divorcee
+
+-content_for :footer_text do
+  %p
+    * Dr. Laminator did not provide the service specified. Dr. Laminator will only laminate your messages printed in Helvetica.
+  %p
+    ** Or at all.
